src/test/deca/context/invalid/class_this_in_main.deca
// Description :
// 
//      Test incorrect d'un appel de this dans un main
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 19/06/2023 par gl03

{
    int x=3;
    this.x=4;
}